--- a/index.html
+++ b/index.html
@@ -970,9 +970,6 @@
         ];
 
         const clasesPorEscuelaConfig = [
-            { filaNombre: 425, filaValor: 440 },
-            { filaNombre: 426, filaValor: 441 },
-            { filaNombre: 427, filaValor: 442 },
             { filaNombre: 428, filaValor: 443 },
             { filaNombre: 429, filaValor: 444 },
             { filaNombre: 430, filaValor: 445 },
@@ -981,31 +978,34 @@
             { filaNombre: 433, filaValor: 448 },
             { filaNombre: 434, filaValor: 449 },
             { filaNombre: 435, filaValor: 450 },
-            { filaNombre: 436, filaValor: 451 }
+            { filaNombre: 436, filaValor: 451 },
+            { filaNombre: 437, filaValor: 442 },
+            { filaNombre: 438, filaValor: 443 },
+            { filaNombre: 439, filaValor: 444 },
         ];
 
         const colorSchemes = [
-            { primary: 'rgba(66, 99, 133, 0.75)', secondary: 'rgba(100, 141, 174, 0.2)', border: 'rgba(66, 99, 133, 1)', dark: '#3d5a73', light: 'rgba(100, 141, 174, 0.15)', nombre: 'Administración' },
-            { primary: 'rgba(214, 119, 87, 0.75)', secondary: 'rgba(230, 150, 120, 0.2)', border: 'rgba(214, 119, 87, 1)', dark: '#c66e4d', light: 'rgba(230, 150, 120, 0.15)', nombre: 'Ingeniería Civil' },
-            { primary: 'rgba(102, 170, 106, 0.75)', secondary: 'rgba(140, 195, 143, 0.2)', border: 'rgba(102, 170, 106, 1)', dark: '#669e69', light: 'rgba(140, 195, 143, 0.15)', nombre: 'Contabilidad' },
-            { primary: 'rgba(216, 101, 132, 0.75)', secondary: 'rgba(230, 140, 165, 0.2)', border: 'rgba(216, 101, 132, 1)', dark: '#c75c85', light: 'rgba(230, 140, 165, 0.15)', nombre: 'Enfermería' },
-            { primary: 'rgba(156, 108, 168, 0.75)', secondary: 'rgba(186, 145, 195, 0.2)', border: 'rgba(156, 108, 168, 1)', dark: '#9a6ba8', light: 'rgba(186, 145, 195, 0.15)', nombre: 'Nutrición' },
-            { primary: 'rgba(230, 154, 92, 0.75)', secondary: 'rgba(242, 180, 130, 0.2)', border: 'rgba(230, 154, 92, 1)', dark: '#d1925a', light: 'rgba(242, 180, 130, 0.15)', nombre: 'Medicina' },
-            { primary: 'rgba(82, 157, 204, 0.75)', secondary: 'rgba(120, 180, 215, 0.2)', border: 'rgba(82, 157, 204, 1)', dark: '#5090b8', light: 'rgba(120, 180, 215, 0.15)', nombre: 'Sistemas' },
-            { primary: 'rgba(126, 102, 174, 0.75)', secondary: 'rgba(160, 140, 195, 0.2)', border: 'rgba(126, 102, 174, 1)', dark: '#7e66ae', light: 'rgba(160, 140, 195, 0.15)', nombre: 'Arquitectura' },
-            { primary: 'rgba(77, 148, 140, 0.75)', secondary: 'rgba(115, 175, 168, 0.2)', border: 'rgba(77, 148, 140, 1)', dark: '#4d8e87', light: 'rgba(115, 175, 168, 0.15)', nombre: 'Ambiental' },
-            { primary: 'rgba(140, 113, 102, 0.75)', secondary: 'rgba(170, 145, 135, 0.2)', border: 'rgba(140, 113, 102, 1)', dark: '#8c7166', light: 'rgba(170, 145, 135, 0.15)', nombre: 'Industrias' },
-            { primary: 'rgba(90, 142, 199, 0.75)', secondary: 'rgba(130, 170, 215, 0.2)', border: 'rgba(90, 142, 199, 1)', dark: '#5a8ec7', light: 'rgba(130, 170, 215, 0.15)', nombre: 'Educación' },
-            { primary: 'rgba(175, 180, 100, 0.75)', secondary: 'rgba(200, 205, 140, 0.2)', border: 'rgba(155, 160, 80, 1)', dark: '#9b9e50', light: 'rgba(200, 205, 140, 0.15)', nombre: 'Derecho' },
-            { primary: 'rgba(224, 122, 95, 0.75)', secondary: 'rgba(235, 155, 130, 0.2)', border: 'rgba(224, 122, 95, 1)', dark: '#d07a5f', light: 'rgba(235, 155, 130, 0.15)', nombre: 'Teología' },
-            { primary: 'rgba(120, 140, 153, 0.75)', secondary: 'rgba(155, 170, 180, 0.2)', border: 'rgba(120, 140, 153, 1)', dark: '#788c99', light: 'rgba(155, 170, 180, 0.15)', nombre: 'Psicología' },
-            { primary: 'rgba(217, 108, 100, 0.75)', secondary: 'rgba(230, 145, 138, 0.2)', border: 'rgba(217, 108, 100, 1)', dark: '#c76c64', light: 'rgba(230, 145, 138, 0.15)', nombre: 'Alimentos' },
-            { primary: 'rgba(77, 170, 189, 0.75)', secondary: 'rgba(115, 195, 210, 0.2)', border: 'rgba(77, 170, 189, 1)', dark: '#4daab d', light: 'rgba(115, 195, 210, 0.15)', nombre: 'Mecatrónica' },
-            { primary: 'rgba(140, 180, 108, 0.75)', secondary: 'rgba(170, 200, 145, 0.2)', border: 'rgba(140, 180, 108, 1)', dark: '#8cb46c', light: 'rgba(170, 200, 145, 0.15)', nombre: 'Agroindustrial' },
-            { primary: 'rgba(230, 180, 90, 0.75)', secondary: 'rgba(242, 205, 135, 0.2)', border: 'rgba(230, 180, 90, 1)', dark: '#d1b45a', light: 'rgba(242, 205, 135, 0.15)', nombre: 'Marketing' },
-            { primary: 'rgba(100, 115, 170, 0.75)', secondary: 'rgba(140, 150, 195, 0.2)', border: 'rgba(100, 115, 170, 1)', dark: '#6473aa', light: 'rgba(140, 150, 195, 0.15)', nombre: 'Comunicación' },
-            { primary: 'rgba(216, 101, 132, 0.75)', secondary: 'rgba(230, 140, 165, 0.2)', border: 'rgba(216, 101, 132, 1)', dark: '#d06584', light: 'rgba(230, 140, 165, 0.15)', nombre: 'Traducción' },
-            { primary: 'rgba(77, 140, 130, 0.75)', secondary: 'rgba(115, 170, 162, 0.2)', border: 'rgba(77, 140, 130, 1)', dark: '#4d8c82', light: 'rgba(115, 170, 162, 0.15)', nombre: 'Turismo' }
+            { primary: 'rgba(52, 109, 164, 0.80)', secondary: 'rgba(90, 145, 195, 0.2)', border: 'rgba(52, 109, 164, 1)', dark: '#2c5f8d', light: 'rgba(90, 145, 195, 0.15)', nombre: 'Administración' },
+            { primary: 'rgba(230, 108, 74, 0.80)', secondary: 'rgba(242, 145, 115, 0.2)', border: 'rgba(230, 108, 74, 1)', dark: '#d66642', light: 'rgba(242, 145, 115, 0.15)', nombre: 'Ingeniería Civil' },
+            { primary: 'rgba(92, 184, 92, 0.80)', secondary: 'rgba(130, 205, 130, 0.2)', border: 'rgba(92, 184, 92, 1)', dark: '#5cb85c', light: 'rgba(130, 205, 130, 0.15)', nombre: 'Contabilidad' },
+            { primary: 'rgba(236, 90, 130, 0.80)', secondary: 'rgba(245, 135, 165, 0.2)', border: 'rgba(236, 90, 130, 1)', dark: '#d65a82', light: 'rgba(245, 135, 165, 0.15)', nombre: 'Enfermería' },
+            { primary: 'rgba(171, 94, 186, 0.80)', secondary: 'rgba(200, 135, 210, 0.2)', border: 'rgba(171, 94, 186, 1)', dark: '#9b5eba', light: 'rgba(200, 135, 210, 0.15)', nombre: 'Nutrición' },
+            { primary: 'rgba(245, 145, 66, 0.80)', secondary: 'rgba(255, 175, 110, 0.2)', border: 'rgba(245, 145, 66, 1)', dark: '#e88f3e', light: 'rgba(255, 175, 110, 0.15)', nombre: 'Medicina' },
+            { primary: 'rgba(52, 152, 219, 0.80)', secondary: 'rgba(100, 180, 230, 0.2)', border: 'rgba(52, 152, 219, 1)', dark: '#2c8cdb', light: 'rgba(100, 180, 230, 0.15)', nombre: 'Sistemas' },
+            { primary: 'rgba(142, 88, 193, 0.80)', secondary: 'rgba(175, 130, 210, 0.2)', border: 'rgba(142, 88, 193, 1)', dark: '#8e58c1', light: 'rgba(175, 130, 210, 0.15)', nombre: 'Arquitectura' },
+            { primary: 'rgba(54, 162, 150, 0.80)', secondary: 'rgba(100, 190, 180, 0.2)', border: 'rgba(54, 162, 150, 1)', dark: '#36a296', light: 'rgba(100, 190, 180, 0.15)', nombre: 'Ambiental' },
+            { primary: 'rgba(150, 111, 97, 0.80)', secondary: 'rgba(180, 145, 130, 0.2)', border: 'rgba(150, 111, 97, 1)', dark: '#966f61', light: 'rgba(180, 145, 130, 0.15)', nombre: 'Industrias' },
+            { primary: 'rgba(71, 133, 214, 0.80)', secondary: 'rgba(115, 165, 230, 0.2)', border: 'rgba(71, 133, 214, 1)', dark: '#4785d6', light: 'rgba(115, 165, 230, 0.15)', nombre: 'Educación' },
+            { primary: 'rgba(185, 195, 85, 0.80)', secondary: 'rgba(210, 215, 130, 0.2)', border: 'rgba(165, 175, 65, 1)', dark: '#a5af41', light: 'rgba(210, 215, 130, 0.15)', nombre: 'Derecho' },
+            { primary: 'rgba(242, 113, 82, 0.80)', secondary: 'rgba(250, 150, 125, 0.2)', border: 'rgba(242, 113, 82, 1)', dark: '#e26e4e', light: 'rgba(250, 150, 125, 0.15)', nombre: 'Teología' },
+            { primary: 'rgba(108, 140, 158, 0.80)', secondary: 'rgba(145, 170, 185, 0.2)', border: 'rgba(108, 140, 158, 1)', dark: '#6c8c9e', light: 'rgba(145, 170, 185, 0.15)', nombre: 'Psicología' },
+            { primary: 'rgba(231, 98, 88, 0.80)', secondary: 'rgba(242, 140, 130, 0.2)', border: 'rgba(231, 98, 88, 1)', dark: '#d76256', light: 'rgba(242, 140, 130, 0.15)', nombre: 'Alimentos' },
+            { primary: 'rgba(54, 185, 204, 0.80)', secondary: 'rgba(100, 210, 225, 0.2)', border: 'rgba(54, 185, 204, 1)', dark: '#36b9cc', light: 'rgba(100, 210, 225, 0.15)', nombre: 'Mecatrónica' },
+            { primary: 'rgba(126, 195, 92, 0.80)', secondary: 'rgba(165, 215, 135, 0.2)', border: 'rgba(126, 195, 92, 1)', dark: '#7ec35c', light: 'rgba(165, 215, 135, 0.15)', nombre: 'Agroindustrial' },
+            { primary: 'rgba(245, 183, 66, 0.80)', secondary: 'rgba(255, 210, 120, 0.2)', border: 'rgba(245, 183, 66, 1)', dark: '#e8b742', light: 'rgba(255, 210, 120, 0.15)', nombre: 'Marketing' },
+            { primary: 'rgba(87, 106, 192, 0.80)', secondary: 'rgba(130, 145, 210, 0.2)', border: 'rgba(87, 106, 192, 1)', dark: '#576ac0', light: 'rgba(130, 145, 210, 0.15)', nombre: 'Comunicación' },
+            { primary: 'rgba(236, 90, 145, 0.80)', secondary: 'rgba(245, 135, 180, 0.2)', border: 'rgba(236, 90, 145, 1)', dark: '#d65a91', light: 'rgba(245, 135, 180, 0.15)', nombre: 'Traducción' },
+            { primary: 'rgba(54, 150, 140, 0.80)', secondary: 'rgba(100, 180, 170, 0.2)', border: 'rgba(54, 150, 140, 1)', dark: '#36968c', light: 'rgba(100, 180, 170, 0.15)', nombre: 'Turismo' }
         ];
 
         const facultades = {
